# so100-arm

./: .gitignore  Caddyfile  README.md  caddy.Dockerfile  docker-compose.yml
controller/: Dockerfile  pyproject.toml
controller/app/: agent.py  image_analyzer.py  main.py  webui.py
controller/app/static/: index.html
controller/static/: index.html
lerobot-driver/: .dockerignore  Dockerfile  pyproject.toml
lerobot-driver/app/: filter.py  main.py  robot_client.py  so100_autodetect.py  so100_fpv_follower.py  teleop.py  viewer.py
lerobot-driver/config/: calibration.json
tts/: Dockerfile  pyproject.toml
tts/app/: main.py
whisper/: Cargo.toml  Dockerfile
whisper/src/: main.rs
