[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "time", "sync", "net"] }
tokio-util = "0.7"
log = "0.4.27"
env_logger = "0.11.8"
anyhow = "1"
whisper-rs = "0.15"
num_cpus = "1.17.0"
zenoh = "1.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
